# synacor-challenge-hs

./: README.md  arch-spec  synacor-challenge-hs.cabal
app/: Main.hs
src/: Lib.hs  Orb.hs  Verification.hs
