name:                synacor-challenge-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/shaunplee/synacor-challenge-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Shaun Lee
maintainer:          shaun@curlyfri.es
copyright:           2016 Shaun Lee
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       binary >= 0.8.3.0,
                       bytestring >= 0.10.8.1,
                       vector >= 0.11.0.0
  default-language:    Haskell2010

executable synacor-challenge-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10.8.1
                     , synacor-challenge-hs
                     , vector >= 0.11.0.0
  default-language:    Haskell2010

test-suite synacor-challenge-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring >= 0.10.8.1
                     , synacor-challenge-hs
                     , vector >= 0.11.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/synacor-challenge-hs
